--- a/public/css/formikation.css
+++ b/public/css/formikation.css
@@ -5,8 +5,11 @@
   =====================================
 */
 form.formication {
-  /* SELECT TAG */
-  /* Campos de textos */ }
+  /* Checks y radios */
+  /* Labels */
+  /* Select tag */
+  /* Select span */
+  /* Campos de texto */ }
   form.formication input[type=checkbox], form.formication input[type=radio] {
     width: 19px;
     height: 20px;
@@ -23,13 +26,12 @@ form.formication {
       margin-top: 3px;
       background: url("formikation-sprite.png") no-repeat -1px 0;
       visibility: visible; }
-  form.formication input[type=radio] {
-    background: red; }
-    form.formication input[type=radio]:before {
-      background-position: -1px -20px;
-      visibility: visible; }
+  form.formication input[type=radio]:before {
+    background-position: -1px -20px;
+    visibility: visible; }
   form.formication label {
     display: inline-block;
+    padding-right: 16px;
     cursor: pointer; }
     form.formication label.checked {
       text-align: left; }
@@ -43,6 +45,7 @@ form.formication {
     min-width: 250px;
     padding: 8px 15px 4px 4px;
     border: 1px solid #ccc;
+    background: #fff;
     border-radius: 3px; }
     form.formication .select:after {
       content: url("filter-arrow.png");
@@ -82,6 +85,7 @@ form.formication {
     outline: 0;
     font-size: 14px;
     border-radius: 3px;
+    color: #333;
     -moz-box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.2);
     box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.2); }
@@ -95,30 +99,91 @@ form.formication {
   Themes & variants
   =====================================
 */
-form.formication.ue-theme .row {
-  padding-bottom: 16px; }
-form.formication.ue-theme form {
-  padding: 16px; }
-form.formication.ue-theme fieldset {
-  border: 1px solid #ccc;
-  margin: 0;
-  padding: 20px; }
-form.formication.ue-theme input[type=submit] {
-  width: 124px;
-  height: 35px;
-  border: 1px solid #6A0311;
-  border-radius: 4px;
-  margin-right: 16px;
-  font-family: 'Oswald', Arial, Helvetica, sans-serif;
-  text-align: center;
-  color: #fff;
-  background: #A1071B;
-  background-image: -webkit-linear-gradient(80% 0% -85deg, #b3071b 0%, #7f071b 93%, #7c071b 99%);
-  background-image: -moz-linear-gradient(80% 0% -85deg, #b3071b 0%, #7f071b 93%, #7c071b 99%);
-  background-image: -o-linear-gradient(80% 0% -85deg, #b3071b 0%, #7f071b 93%, #7c071b 99%);
-  background-image: linear-gradient(80% 0% -85deg, #b3071b 0%, #7f071b 93%, #7c071b 99%);
-  -moz-box-shadow: inset 1px 1px 0px rgba(255, 255, 255, 0.35);
-  -webkit-box-shadow: inset 1px 1px 0px rgba(255, 255, 255, 0.35);
-  box-shadow: inset 1px 1px 0px rgba(255, 255, 255, 0.35);
-  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffb3071b,endColorstr=#ff7c071b,GradientType=1)";
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffb3071b,endColorstr=#ff7c071b,GradientType=1); }
+form.formication.ue-theme {
+  font: 400 14px/1.25 'Oswald', Arial, Helvetica, sans-serif;
+  text-align: left;
+  /* Label */
+  /* Select tag */
+  /* Checks y radios */
+  /* Campos de texto */
+  /* Botón de enviar */ }
+  form.formication.ue-theme .row {
+    padding-bottom: 16px; }
+  form.formication.ue-theme form {
+    padding: 16px; }
+  form.formication.ue-theme fieldset {
+    border: 1px solid #ccc;
+    background: #f8f8f8;
+    margin: 0;
+    padding: 20px; }
+  form.formication.ue-theme label {
+    padding-bottom: 8px;
+    text-transform: uppercase; }
+  form.formication.ue-theme .select {
+    min-width: 250px;
+    padding: 8px 15px 7px 4px;
+    border: 1px solid #ccc;
+    border-radius: 0; }
+    form.formication.ue-theme .select:after {
+      content: url("filter-arrow-double.png");
+      display: block;
+      float: right;
+      padding: 8px 6px 7px 6px;
+      margin: -7px -15px;
+      border-left: 0; }
+    form.formication.ue-theme .select .select-label {
+      display: inline-block;
+      margin: 0;
+      padding: 0 30px 0 0;
+      color: #666;
+      max-width: 430px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis; }
+    form.formication.ue-theme .select.selectFocus {
+      border-color: #000; }
+      form.formication.ue-theme .select.selectFocus:after {
+        border-color: #000; }
+      form.formication.ue-theme .select.selectFocus .select-label {
+        color: #000; }
+    .field_with_errors form.formication.ue-theme .select {
+      border-color: red; }
+      .field_with_errors form.formication.ue-theme .select:after {
+        border-color: red; }
+      .field_with_errors form.formication.ue-theme .select .file-label {
+        color: red; }
+  form.formication.ue-theme input[type=checkbox]:before, form.formication.ue-theme input[type=radio]:before {
+    background: url("formikation-sprite-ue-theme.png") no-repeat -1px 0; }
+  form.formication.ue-theme input[type=text],
+  form.formication.ue-theme input[type=password],
+  form.formication.ue-theme textarea {
+    width: 100%;
+    padding: 8px 4px;
+    background: #fff;
+    border: 1px solid #ccc;
+    outline: 0;
+    border-radius: 0;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none; }
+    form.formication.ue-theme input[type=text]:focus,
+    form.formication.ue-theme input[type=password]:focus,
+    form.formication.ue-theme textarea:focus {
+      border-color: #000; }
+  form.formication.ue-theme input[type=submit] {
+    min-width: 120px;
+    height: auto;
+    display: inline-block;
+    position: relative;
+    padding: 0.95em 10px 1.05em 10px;
+    margin-right: 16px;
+    border: 0;
+    outline: 0;
+    cursor: pointer;
+    font: 400 14px/1.25 'Oswald', Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+    color: #fff;
+    background-color: #8f1b27;
+    border-radius: 3px; }
