--- a/public/css/formikation.scss
+++ b/public/css/formikation.scss
@@ -5,7 +5,7 @@
   =====================================
 */
 
-form.formication {
+form.formikation {
 
   /* Checks y radios */
   input[type=checkbox], input[type=radio] {
@@ -135,7 +135,7 @@ form.formication {
   =====================================
 */
 
-form.formication.ue-theme {
+form.formikation.ue-theme {
 
   font: 400 14px/1.25 'Oswald', Arial, Helvetica, sans-serif;
   text-align: left;
