--- a/public/css/formikation.css
+++ b/public/css/formikation.css
@@ -93,6 +93,55 @@ form.formikation {
     form.formikation input[type=password]:focus,
     form.formikation textarea:focus {
       border-color: #000; }
+  form.formikation .fk-file-input {
+    width: 94%;
+    height: 39px;
+    display: block;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding: 8px 4px;
+    background: #fff;
+    border: 1px solid #ccc;
+    outline: 0;
+    border-radius: 0;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none; }
+    form.formikation .fk-file-input:after {
+      content: 'Elegir fichero';
+      display: block;
+      width: 105px;
+      height: 21px;
+      /*24*/
+      position: absolute;
+      right: 3px;
+      top: 3px;
+      padding: 10px 10px 0 10px;
+      border: 0;
+      outline: 0;
+      cursor: pointer;
+      font: 400 11px/1.25 'Oswald', Arial, Helvetica, sans-serif;
+      text-transform: uppercase;
+      text-decoration: none;
+      text-align: center;
+      color: #fff;
+      background-color: #8f1b27;
+      border-radius: 3px; }
+    form.formikation .fk-file-input > p {
+      margin: 0;
+      padding: 0px 0 0 8px !important; }
+    form.formikation .fk-file-input input[type=file] {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      top: 0;
+      opacity: 0;
+      /* IE8 */
+      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+      z-index: 3;
+      cursor: pointer; }
 
 /*
   ====================================
